adds requirement on type operations

--- a/draft/approach.tex
+++ b/draft/approach.tex
@@ -74,8 +74,9 @@ refinement predicates;
 %
 \textbf{(3)} $P : X \to \typos$;
 %
-\textbf{(4)} $E \subseteq X \times X$ an equivalence relation over
-$X$.
+\textbf{(4)} $\mathcal{M} \subseteq X \times X$ an equivalence
+relation over $X$ such that for each equivalence class
+$E \in \equiv_{\mathcal{M}}$, $\restrict{N}{E}$ is one-to-one.
 %
 The space of relational refinement types over $I$ and $X$ is denoted
 $\reltypes{I, X}$.
