--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -161,6 +161,8 @@
 
 \newcommand{\invsof}[1]{\mathsf{Invs}[ #1 ]}
 
+\newcommand{\iseq}[3]{\mathsf{Eq}_{#1, #2}^{#3}}
+
 \newcommand{\isind}{\mathsf{HasTy}}
 
 \newcommand{\isvalid}{\mathsf{IsValid}}
@@ -371,7 +373,7 @@
 
 \newcommand{\unit}{\cc{()}}
 
-\newcommand{\unitty}{\cdot}
+\newcommand{\unitty}{1}
 
 \newcommand{\unwind}{\textsc{Unwind}\xspace}
 
