--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -1,6 +1,4 @@
 % shorthand: paper-specific shorthand
-\newcommand{\absvars}{X_A}
-
 \newcommand{\alltrue}{\mathsf{AllTrue}}
 
 \newcommand{\andsub}{\mathsf{AndSub}}
@@ -29,7 +27,7 @@
 
 \newcommand{\basety}{\mathbb{D}}
 
-\newcommand{\basevalues}{\mathsf{Vals}_B}
+\newcommand{\basevals}{V_D}
 
 \newcommand{\chc}[1]{\mathsf{CHC}[ #1 ]}
 
